[package]
name = "runchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="miner_node"
path = "src/miner_node.rs"

[[bin]]
name="light_node"
path ="src/light_node.rs"

[dependencies]
chrono = "0.4.19"
hex = "0.4.3"
blake3 = "0.3"
rayon = "1"
tokio = { version = "1.17.0", features = ["full"] }
libp2p = { version = "0.40.0", features = ["tcp-tokio","mdns"] }
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
ed25519 = "1.4.1"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
rs_merkle = "1.2.0"